...
    <string name="item_send_error">Impossible to send the message</string>
    <string name="refreshtask_null">ChatActivity.RefreshTask: recipient or context is null</string>

    <!-- ChatUsersList -->
    <string name="add_new_contact_title">Add a new contact</string>
    <string name="add_new_contact_message">Enter the mail of the new contact</string>
    <string name="add_new_contact_hint">Mail</string>
    <string name="add_new_contact_positive_button">Add</string>
    <string name="add_new_contact_negative_button">Cancel</string>
    <string name="add_new_contact_impossible">Impossible to add the contact</string>
    <string name="add_user_text">New</string>

    <!-- JSON related -->
    <string name="malformed_json">Malformed json, either null or no \'type\' value</string>
    <string name="json_extract_failed">Json extract failed</string>

    <!-- Refresh -->
...
    <string name="choose_file">Choose a file</string>
    <string name="select_file_title">"Complete action using "</string>
    <string name="unable_to_create_item">Unable to create and send item</string>
    <string name="public_without_condition">A public item must have a location.</string>

    <!-- Items view -->
    <string name="item_is_locked_getview">You have to fill the conditions to see the message !</string>
    <string name="item_details_conditions_title">Condition(s)</string>
    <string name="item_details_preview_title">Preview</string>
    <string name="item_details_from">From :</string>
    <string name="item_details_to">To :</string>
    <string name="item_details_alertDialog_title">Item description</string>
    <string name="label_locked_item">Locked</string>
    <string name="label_unlocked_item">Unlocked</string>

    <!-- Network related -->
    <string name="network_db_client_null">\'serverUrl\' or \'networkProvider\' is null</string>
...
    <string name="token_name_is">(token,name) is (%1$s, %2$s)</string>
    <string name="account_not_chosen_message">You didn\'t choose an account, an account is necessary.</string>
    <string name="account_not_connected">Not connected</string>


    <!-- Conditions -->
    <string name="condition_true">true</string>
    <string name="condition_false">false</string>
    <string name="condition_and">and</string>
    <string name="condition_or">or</string>
    <string name="condition_not">not</string>
    <string name="condition_position">Go here !</string>
    <string name="condition_getlocation_unsupported">The condition does NOT have any position</string>
    <string name="positioncondition_location_null">PositionCondition: location cannot be null</string>
    <string name="invalid_longitude_latitude">Invalid latitude or longitude</string>

    <!-- Storage -->
    <string name="error_file_deletion">Couldn\'t delete file %s</string>
...
