<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ListView
        android:id="@+id/contactsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/actualUserName"
        android:divider="#888888"
        android:dividerHeight="2dp"
        android:listSelector="@android:color/transparent"
        android:paddingTop="20dp"
        android:transcriptMode="alwaysScroll" />

    <TextView
        android:id="@+id/actualUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/newContact"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/newContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/contactsList"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/contactsList"
        android:text="@string/add_user_text" />

</RelativeLayout>
